--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
-  "ownerNumber": ["628978378100@s.whatsapp.net"], 
-  "ownerName": ["Tsuyuzaki"], 
+  "ownerNumber": ["60174306734@s.whatsapp.net"], 
+  "ownerName": ["Abbas"], 
   "botName": "Misaki MD", 
   "youtubeOwner": "https://youtube.com/channel/UCcI5hJoUd29I_OosaOB_GQw", 
   "web": "https://lolhuman.xyz/", 
   "donasiQris": "https://i.ibb.co/CVMrYwV/Qris-Tsuyuzaki.jpg",
-  "donasiPulsa": "0895638102488", 
-  "footer": "© Tsuyuzakiメ", 
+  "donasiPulsa": "08995820020", 
+  "footer": "© Abbasメ", 
   "fake": "© Create Misaki MD", 
   "sessionName": "misaki",
   "pathimg": "./media/misaki.jpg",
